--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^2.0.24",
+    "@ai-sdk/openai": "^2.0.52",
+    "@ai-sdk/xai": "^2.0.26",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "ai": "^5.0.71",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "katex": "^0.16.23",
@@ -23,7 +27,8 @@
     "react-dom": "^19.0.0",
     "react-latex-next": "^3.0.0",
     "react-syntax-highlighter": "^15.6.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
