--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.7",
     "ai": "^5.0.71",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
