--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/react": "^2.0.82",
     "@ai-sdk/xai": "^2.0.26",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@sentry/nextjs": "^10.22.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
@@ -31,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-latex-next": "^3.0.0",
     "react-syntax-highlighter": "^15.6.6",
+    "sugar-high": "^0.9.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
