feat: implement fast streaming performance optimizations
- Add adaptive throttling based on content size
- Implement growth rate detection for fast streaming
- Add minimal processing mode for large/fast content
- Implement deferred full processing after streaming
- Update virtual scrolling thresholds for fast streams
- Fix build errors (any types, unescaped entities, require imports)
- Add Vercel Analytics and Speed Insights
- Update .gitignore to exclude markdown documentation files
- Fix toast context usage in HistorySidebar
- Replace require() with dynamic imports for Sentry

All 76 tests passing. Ready for Vercel deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,38 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# docs
+# docs and markdown files
+*.md
+!README.md
 supabaseDOC.md
 
 # cursor
 .cursor/worktrees.json
+
+# test results and documentation
+TEST_*.md
+*_SUMMARY.md
+*_REVIEW.md
+*_ANALYSIS.md
+*_PLAN.md
+*_GUIDE.md
+*_RESULTS.md
+*_VERIFICATION.md
+*_EXPLAINED.md
+*_FIXES.md
+*_ISSUES.md
+*_STATUS.md
+*_CHECKLIST.md
+*_COMPLETE.md
+*_DIAGRAM.md
+*_COMPARISON.md
+*_SOLUTIONS.md
+*_DOCUMENTATION.md
+*_BOTTLENECK.md
+*_OPTIMIZATIONS.md
+*_CONCEPTS.md
+*_SIMPLE.md
+*_FLOW.md
+*_FIX.md
+*_SUMMARY.md
+md/
