chore: exclude test files and pages from git
- Add test pages (app/test/) to .gitignore
- Add test files (__tests__/, *.test.ts, *.test.tsx) to .gitignore
- Add vitest config files to .gitignore
- Add development tool directories to .gitignore
- Remove test files from git tracking

This prevents test pages from causing Vercel build failures.

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,26 @@ supabaseDOC.md
 # cursor
 .cursor/worktrees.json
 
+# test files and pages (not needed in production)
+app/test/
+**/__tests__/
+**/*.test.ts
+**/*.test.tsx
+**/*.spec.ts
+**/*.spec.tsx
+vitest.config.ts
+vitest.setup.ts
+coverage/
+.nyc_output/
+
+# development tools
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
 # test results and documentation
 TEST_*.md
 *_SUMMARY.md
