--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.525.0",
     "marked-react": "^3.0.1",
     "next": "15.5.7",
+    "nuqs": "^2.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-latex-next": "^3.0.0",
