--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ai": "^5.0.71",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-tiktoken": "^1.0.21",
     "katex": "^0.16.23",
     "lucide-react": "^0.525.0",
     "marked-react": "^3.0.1",
