--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/react": "^2.0.82",
     "@ai-sdk/xai": "^2.0.26",
+    "@excalidraw/excalidraw": "^0.18.0",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sentry/nextjs": "^10.22.0",
@@ -34,14 +35,23 @@
     "katex": "^0.16.23",
     "lucide-react": "^0.525.0",
     "marked-react": "^3.0.1",
+    "mermaid": "^11.12.2",
     "next": "15.5.7",
     "nuqs": "^2.8.5",
+    "pdfjs-dist": "^5.4.449",
+    "plantuml-encoder": "^1.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-latex-next": "^3.0.0",
+    "react-pdf": "^10.2.0",
+    "react-player": "^3.4.0",
     "react-syntax-highlighter": "^15.6.6",
+    "shiki": "^3.20.0",
     "sugar-high": "^0.9.5",
     "tailwind-merge": "^3.3.1",
+    "vega": "^6.2.0",
+    "vega-embed": "^7.1.0",
+    "vega-lite": "^6.4.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
