--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "katex": "^0.16.23",
     "lucide-react": "^0.525.0",
     "marked-react": "^3.0.1",
+    "mdx": "^0.3.1",
     "mermaid": "^10.9.3",
     "next": "15.5.7",
+    "next-mdx-remote": "^5.0.0",
     "nuqs": "^2.8.5",
     "pdfjs-dist": "^5.4.449",
     "plantuml-encoder": "^1.4.0",
@@ -52,6 +54,7 @@
     "shiki": "^3.20.0",
     "sugar-high": "^0.9.5",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6",
     "vega": "^6.2.0",
     "vega-embed": "^7.1.0",
     "vega-lite": "^6.4.1",
